argo-services/ntfy/ntfy-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ntfy-deployment
  labels:
    app: ntfy-deployment
  annotations:
    reloader.stakater.com/auto: "true"
spec:
  revisionHistoryLimit: 5
  replicas: 1
  selector:
    matchLabels:
      app: ntfy-pod
  template:
    metadata:
      labels:
        app: ntfy-pod
    spec:
      containers:
        - name: ntfy 
          image: ntfy
          args: ["serve"]
          env:  #example of adjustments made in environmental variables
            - name: TZ # set timezone
              value: Europe/Berlin
            - name: NTFY_DEBUG # enable/disable debug
              value: "false"
            - name: NTFY_LOG_LEVEL # adjust log level
              value: INFO
            - name: NTFY_BASE_URL # add base url
              value: https://ntfy.tailc5dc8e.ts.net
          ports: 
            - containerPort: 80
              name: http-ntfy
          resources:
            limits:
              memory: 300Mi
              cpu:  200m
            requests:
                  cpu: 150m
                  memory: 150Mi
          volumeMounts:
            - mountPath: /etc/ntfy/server.yml
              subPath: server.yml
              name: config-volume # generated via configMapGenerator from kustomization file
            - mountPath: /var/cache/ntfy
              name: cache-volume # cache volume mounted to persistent volume
      volumes:
        - name: config-volume
          configMap: # uses configmap generator to parse server.yml to configmap
            name: server-config
        - name: cache-volume
          persistentVolumeClaim: # stores /cache/ntfy in defined pv
            claimName: ntfy-pvc
